# s2gold

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  Makefile  README.md  ROADMAP.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml
crates/desktop/: Cargo.toml  build.rs  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/icons/: icon.icns
crates/desktop/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  lib.rs  main.rs  models.rs  settings.rs  store.rs
crates/server/src/routes/: health.rs  mod.rs  saves.rs  sessions.rs
crates/server/tests/: api.rs
docs/: FEASIBILITY.md  GUIDE.md  PLAN.md  ROADMAP.md
docs/engine-notes/: ARCHITECTURE.md
docs/format-notes/: CONTRACTS.md  LINKS.md
docs/gameplay-notes/: CONSTANTS.md  MILITARY.md  OBJECTS.md  TICKS.md
e2e/: guide-shots.config.ts  guide-shots.ts  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: campaign.spec.ts  floating-ui.spec.ts  game.spec.ts  helpers.ts  menu.spec.ts  smoke.spec.ts
src/s2gold/: __init__.py  __main__.py  atlas.py  cli.py  core.py
src/s2gold/convert/: __init__.py  audio.py  bobs.py  fonts.py  graphics.py  maps.py  palettes.py  pics.py  terrain.py  texts.py  ui.py  video.py
src/s2gold/formats/: binio.py  bitmaps.py  bob.py  datidx.py  gametext.py  gouraud.py  iff.py  lbm.py  lst.py  palette.py  wld.py  xmidi.py
src/s2gold/server/: app.py  config.py  models.py  saves.py  sessions.py
src/s2gold/server/routers/: health.py  saves.py  sessions.py
tests/: test_audio.py  test_bitmaps.py  test_bob.py  test_bobs_convert.py  test_datidx.py  test_fonts.py  test_formats.py  test_gametext.py  test_graphics.py  test_lbm.py  test_lst.py  test_server.py  test_terrain.py  test_ui.py  test_wld.py  test_xmidi.py
