[package]
name = "s2gold-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Persistence and static-file server for s2gold (saves/sessions API, frontend, assets)"

[lib]
name = "s2gold_server"
path = "src/lib.rs"

[[bin]]
name = "s2gold-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
chrono = { version = "0.4.45", features = ["serde", "clock"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower-http = { version = "0.7.0", features = ["fs"] }
turso = "0.7.0"
uuid = { version = "1.23.5", features = ["v4"] }

[dev-dependencies]
axum-test = "21.0.0"
tempfile = "3.27.0"
